Fix for anchor tag text alignment in button element

--- a/src/styles/modules/_m-button.scss
+++ b/src/styles/modules/_m-button.scss
@@ -13,6 +13,7 @@
   transition: background $duration_medium ease;
   margin: 0 auto;
   padding: 0;
+  text-align: center;
 
   &:focus {
     outline: 0;
